Revise index.html for portfolio layout and content
Updated the HTML structure and content for the portfolio page, including meta tags, header, sections for about, work experience, skills, and contact information.

--- a/index.html
+++ b/index.html
@@ -1,26 +1,111 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My First Website</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Abdul Wahab | Portfolio</title>
+
   <style>
     body {
       font-family: Arial, sans-serif;
+      margin: 0;
       background: #f4f4f4;
-      text-align: center;
-      padding: 50px;
-    }
-    h1 {
       color: #333;
     }
-    p {
-      font-size: 18px;
+
+    header {
+      background: #1f2937;
+      color: white;
+      padding: 50px 20px;
+      text-align: center;
+    }
+
+    section {
+      max-width: 900px;
+      margin: auto;
+      padding: 30px 20px;
+    }
+
+    h2 {
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 5px;
+    }
+
+    .card {
+      background: white;
+      padding: 20px;
+      margin: 15px 0;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    footer {
+      background: #1f2937;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      margin-top: 40px;
+    }
+
+    a {
+      color: #2563eb;
+      text-decoration: none;
     }
   </style>
 </head>
+
 <body>
 
-  <h1>Welcome to My Website 🚀</h1>
-  <p>This is my first website, hosted for free on GitHub Pages.</p>
+<header>
+  <h1>Abdul Wahab</h1>
+  <p>MSc Digital Marketing & Analytics | Helsinki, Finland</p>
+</header>
+
+<section>
+  <h2>About Me</h2>
+  <p>
+    I am a motivated and detail-oriented professional with experience in customer service,
+    operations, and cleaning services. I am currently pursuing a Master's degree in Digital
+    Marketing and Analytics and looking for opportunities to grow professionally.
+  </p>
+</section>
+
+<section>
+  <h2>Work Experience</h2>
+
+  <div class="card">
+    <strong>Restaurant Worker – Fafa’s (Finland)</strong>
+    <p>Handled customer service, inventory management, and daily operations in a fast-paced environment.</p>
+  </div>
+
+  <div class="card">
+    <strong>Cleaner – IHP (Finland)</strong>
+    <p>Maintained hygiene standards and worked independently and in teams.</p>
+  </div>
+
+  <div class="card">
+    <strong>Assistant Group Shop Manager – Borjan-Rafum Group</strong>
+    <p>Managed inventory, cash handling, and daily store operations.</p>
+  </div>
+</section>
+
+<section>
+  <h2>Skills</h2>
+  <p>
+    Microsoft Office, Excel, PowerPoint, Tableau, SPSS, SEO, MS Dynamics 365,
+    Teamwork, Reliability, Time Management
+  </p>
+</section>
+
+<section>
+  <h2>Contact</h2>
+  <p>Email: <a href="mailto:abdulwahab_1096@yahoo.com">abdulwahab_1096@yahoo.com</a></p>
+  <p>LinkedIn: <a href="https://www.linkedin.com/in/abdulwahab96/" target="_blank">linkedin.com/in/abdulwahab96</a></p>
+</section>
+
+<footer>
+  © 2025 Abdul Wahab | Portfolio
+</footer>
 
 </body>
 </html>
