--- a/index.html
+++ b/index.html
@@ -1,57 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Abdul Wahab | Portfolio</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Abdul Wahab | Portfolio</title>
 
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #f4f4f4;
-      color: #333;
-    }
+<style>
+body {
+  margin: 0;
+  font-family: 'Segoe UI', sans-serif;
+  background: #f5f7fa;
+  color: #333;
+}
 
-    header {
-      background: #1f2937;
-      color: white;
-      padding: 50px 20px;
-      text-align: center;
-    }
+header {
+  background: linear-gradient(135deg, #1f2937, #111827);
+  color: white;
+  padding: 80px 20px;
+  text-align: center;
+}
 
-    section {
-      max-width: 900px;
-      margin: auto;
-      padding: 30px 20px;
-    }
+header h1 {
+  font-size: 42px;
+  margin-bottom: 10px;
+}
 
-    h2 {
-      border-bottom: 2px solid #ddd;
-      padding-bottom: 5px;
-    }
+header p {
+  font-size: 18px;
+  opacity: 0.9;
+}
 
-    .card {
-      background: white;
-      padding: 20px;
-      margin: 15px 0;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    }
+section {
+  max-width: 1000px;
+  margin: auto;
+  padding: 50px 20px;
+}
 
-    footer {
-      background: #1f2937;
-      color: white;
-      text-align: center;
-      padding: 15px;
-      margin-top: 40px;
-    }
+h2 {
+  text-align: center;
+  margin-bottom: 30px;
+  color: #111;
+}
 
-    a {
-      color: #2563eb;
-      text-decoration: none;
-    }
-  </style>
+.card {
+  background: white;
+  padding: 25px;
+  border-radius: 10px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+  margin-bottom: 20px;
+  transition: transform 0.3s;
+}
+
+.card:hover {
+  transform: translateY(-5px);
+}
+
+.skills span {
+  display: inline-block;
+  background: #e5e7eb;
+  padding: 8px 14px;
+  margin: 6px;
+  border-radius: 20px;
+  font-size: 14px;
+}
+
+.buttons {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.button {
+  display: inline-block;
+  background: #2563eb;
+  color: white;
+  padding: 12px 20px;
+  margin: 10px;
+  border-radius: 6px;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.button:hover {
+  background: #1d4ed8;
+}
+
+footer {
+  background: #111827;
+  color: #bbb;
+  text-align: center;
+  padding: 20px;
+  margin-top: 40px;
+}
+</style>
 </head>
 
 <body>
@@ -64,47 +104,60 @@
 <section>
   <h2>About Me</h2>
   <p>
-    I am a motivated and detail-oriented professional with experience in customer service,
-    operations, and cleaning services. I am currently pursuing a Master's degree in Digital
-    Marketing and Analytics and looking for opportunities to grow professionally.
+    I am a motivated and detail-oriented professional with experience in operations,
+    customer service, and digital marketing. I am passionate about learning, improving
+    processes, and delivering high-quality results in every role I take.
   </p>
 </section>
 
 <section>
-  <h2>Work Experience</h2>
+  <h2>Experience</h2>
 
   <div class="card">
     <strong>Restaurant Worker – Fafa’s (Finland)</strong>
-    <p>Handled customer service, inventory management, and daily operations in a fast-paced environment.</p>
+    <p>Handled customer service, inventory management, and fast-paced operations.</p>
   </div>
 
   <div class="card">
     <strong>Cleaner – IHP (Finland)</strong>
-    <p>Maintained hygiene standards and worked independently and in teams.</p>
+    <p>Maintained hygiene standards and worked independently with attention to detail.</p>
   </div>
 
   <div class="card">
     <strong>Assistant Group Shop Manager – Borjan-Rafum Group</strong>
-    <p>Managed inventory, cash handling, and daily store operations.</p>
+    <p>Managed inventory, cash flow, and daily operations across multiple locations.</p>
   </div>
 </section>
 
 <section>
   <h2>Skills</h2>
-  <p>
-    Microsoft Office, Excel, PowerPoint, Tableau, SPSS, SEO, MS Dynamics 365,
-    Teamwork, Reliability, Time Management
-  </p>
+  <div class="skills">
+    <span>Digital Marketing</span>
+    <span>SEO</span>
+    <span>Microsoft Office</span>
+    <span>Tableau</span>
+    <span>SPSS</span>
+    <span>MS Dynamics 365</span>
+    <span>Teamwork</span>
+    <span>Time Management</span>
+  </div>
 </section>
 
 <section>
-  <h2>Contact</h2>
-  <p>Email: <a href="mailto:abdulwahab_1096@yahoo.com">abdulwahab_1096@yahoo.com</a></p>
-  <p>LinkedIn: <a href="https://www.linkedin.com/in/abdulwahab96/" target="_blank">linkedin.com/in/abdulwahab96</a></p>
+  <h2>Projects</h2>
+  <div class="card">
+    <strong>Personal Portfolio Website</strong>
+    <p>Designed and developed a responsive personal website using HTML & CSS.</p>
+  </div>
+</section>
+
+<section class="buttons">
+  <a class="button" href="https://www.linkedin.com/in/abdulwahab96/" target="_blank">LinkedIn</a>
+  <a class="button" href="mailto:abdulwahab_1096@yahoo.com">Email Me</a>
 </section>
 
 <footer>
-  © 2025 Abdul Wahab | Portfolio
+  © 2025 Abdul Wahab | All Rights Reserved
 </footer>
 
 </body>
