--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@ footer {
 </section>
 
 <section class="buttons">
+  <a class="button" href="Abdul-Wahab-CV.pdf" download>Download CV</a>
   <a class="button" href="https://www.linkedin.com/in/abdulwahab96/" target="_blank">LinkedIn</a>
   <a class="button" href="mailto:abdulwahab_1096@yahoo.com">Email Me</a>
 </section>
