Refactor sections for fade-in animation effects
Updated sections to use 'fade-in' class for animations and improved structure.

--- a/index.html
+++ b/index.html
@@ -6,102 +6,44 @@
 <title>Abdul Wahab | Portfolio</title>
 
 <style>
-body {
-  margin: 0;
-  font-family: 'Segoe UI', sans-serif;
-  background: #f5f7fa;
-  color: #333;
+/* Animation styles */
+.fade-in {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: opacity 0.8s ease, transform 0.8s ease;
 }
 
-header {
-  background: linear-gradient(135deg, #1f2937, #111827);
-  color: white;
-  padding: 80px 20px;
-  text-align: center;
+.fade-in.show {
+  opacity: 1;
+  transform: translateY(0);
 }
 
-header h1 {
-  font-size: 42px;
-  margin-bottom: 10px;
-}
-
-header p {
-  font-size: 18px;
-  opacity: 0.9;
-}
-
-section {
-  max-width: 1000px;
-  margin: auto;
-  padding: 50px 20px;
-}
-
-h2 {
-  text-align: center;
-  margin-bottom: 30px;
-  color: #111;
-}
-
-.card {
-  background: white;
-  padding: 25px;
-  border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-  margin-bottom: 20px;
-  transition: transform 0.3s;
-}
-
-.card:hover {
-  transform: translateY(-5px);
-}
-
-.skills span {
-  display: inline-block;
-  background: #e5e7eb;
-  padding: 8px 14px;
-  margin: 6px;
-  border-radius: 20px;
-  font-size: 14px;
-}
-
-.buttons {
-  text-align: center;
-  margin-top: 20px;
-}
-
-.button {
-  display: inline-block;
-  background: #2563eb;
-  color: white;
-  padding: 12px 20px;
-  margin: 10px;
-  border-radius: 6px;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.button:hover {
-  background: #1d4ed8;
-}
-
-footer {
-  background: #111827;
-  color: #bbb;
-  text-align: center;
-  padding: 20px;
-  margin-top: 40px;
-}
 </style>
 </head>
 
 <body>
+<script>
+  const sections = document.querySelectorAll('.fade-in');
+
+  const observer = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add('show');
+      }
+    });
+  });
+
+  sections.forEach(section => {
+    observer.observe(section);
+  });
+</script>
 
 <header>
   <h1>Abdul Wahab</h1>
   <p>MSc Digital Marketing & Analytics | Helsinki, Finland</p>
 </header>
 
-<section>
+<section class="fade-in">
   <h2>About Me</h2>
   <p>
     I am a motivated and detail-oriented professional with experience in operations,
@@ -110,7 +52,7 @@ footer {
   </p>
 </section>
 
-<section>
+<section class="fade-in">
   <h2>Experience</h2>
 
   <div class="card">
@@ -127,9 +69,9 @@ footer {
     <strong>Assistant Group Shop Manager – Borjan-Rafum Group</strong>
     <p>Managed inventory, cash flow, and daily operations across multiple locations.</p>
   </div>
-</section>
+<section class="fade-in">
 
-<section>
+<section class="fade-in">
   <h2>Skills</h2>
   <div class="skills">
     <span>Digital Marketing</span>
@@ -141,15 +83,15 @@ footer {
     <span>Teamwork</span>
     <span>Time Management</span>
   </div>
-</section>
+<section class="fade-in">
 
-<section>
+<section class="fade-in">
   <h2>Projects</h2>
   <div class="card">
     <strong>Personal Portfolio Website</strong>
     <p>Designed and developed a responsive personal website using HTML & CSS.</p>
   </div>
-</section>
+<section class="fade-in">
 
 <section class="buttons">
   <a class="button" href="Abdul-Wahab-CV.pdf" download>Download CV</a>
