--- a/index.html
+++ b/index.html
@@ -8,17 +8,8 @@
 <style>
 /* ===== Global Styles ===== */
 body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  background: #f4f6f8;
-  color: #333;
-  line-height: 1.6;
-}
+ <h1 style="color:red;text-align:center;">TEST CHANGE – IF YOU SEE THIS, IT WORKS</h1>
 
-a {
-  text-decoration: none;
-  color: #2563eb;
-}
 
 /* ===== Header ===== */
 header {
