Modify HTML title and add test message
Updated title and added a test message to body.

--- a/index.html
+++ b/index.html
@@ -1,199 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Abdul Wahab | Portfolio</title>
-
-<style>
-/* ===== Global Styles ===== */
-body {
- <h1 style="color:red;text-align:center;">TEST CHANGE – IF YOU SEE THIS, IT WORKS</h1>
-
-/* ===== Header ===== */
-header {
-  background: linear-gradient(135deg, #1f2937, #111827);
-  color: white;
-  text-align: center;
-  padding: 80px 20px;
-}
-
-header h1 {
-  font-size: 42px;
-  margin-bottom: 10px;
-}
-
-header p {
-  font-size: 18px;
-  opacity: 0.9;
-}
-
-/* ===== Sections ===== */
-section {
-  max-width: 1000px;
-  margin: auto;
-  padding: 50px 20px;
-}
-
-h2 {
-  text-align: center;
-  margin-bottom: 30px;
-  color: #111;
-}
-
-/* ===== Cards ===== */
-.card {
-  background: white;
-  padding: 25px;
-  border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-  margin-bottom: 20px;
-  transition: transform 0.3s;
-}
-
-.card:hover {
-  transform: translateY(-5px);
-}
-
-/* ===== Skills ===== */
-.skills span {
-  display: inline-block;
-  background: #e5e7eb;
-  padding: 8px 14px;
-  margin: 6px;
-  border-radius: 20px;
-  font-size: 14px;
-}
-
-/* ===== Buttons ===== */
-.buttons {
-  text-align: center;
-  margin-top: 30px;
-}
-
-.button {
-  display: inline-block;
-  background: #2563eb;
-  color: white;
-  padding: 12px 22px;
-  margin: 10px;
-  border-radius: 6px;
-  font-weight: bold;
-}
-
-.button:hover {
-  background: #1d4ed8;
-}
-
-/* ===== Footer ===== */
-footer {
-  background: #111827;
-  color: #bbb;
-  text-align: center;
-  padding: 20px;
-  margin-top: 50px;
-}
-
-/* ===== Animations ===== */
-.fade-in {
-  opacity: 0;
-  transform: translateY(30px);
-  transition: opacity 0.8s ease, transform 0.8s ease;
-}
-
-.fade-in.show {
-  opacity: 1;
-  transform: translateY(0);
-}
-</style>
+  <title>TEST</title>
 </head>
-
-<body>
-
-<header>
-  <h1>Abdul Wahab</h1>
-  <p>MSc Digital Marketing & Analytics | Helsinki, Finland</p>
-</header>
-
-<section class="fade-in">
-  <h2>About Me</h2>
-  <p>
-    I am a motivated and detail-oriented professional with experience in customer service,
-    operations, and digital marketing. I am currently pursuing a Master's degree in Digital
-    Marketing and Analytics and enjoy learning new technologies and skills.
-  </p>
-</section>
-
-<section class="fade-in">
-  <h2>Experience</h2>
-
-  <div class="card">
-    <strong>Restaurant Worker – Fafa’s (Finland)</strong>
-    <p>Managed customer service, inventory, and daily operations in a fast-paced environment.</p>
-  </div>
-
-  <div class="card">
-    <strong>Cleaner – IHP (Finland)</strong>
-    <p>Maintained hygiene standards with strong attention to detail.</p>
-  </div>
-
-  <div class="card">
-    <strong>Assistant Group Shop Manager – Borjan-Rafum Group</strong>
-    <p>Handled inventory control, cash audits, and operational improvements.</p>
-  </div>
-</section>
-
-<section class="fade-in">
-  <h2>Skills</h2>
-  <div class="skills">
-    <span>Digital Marketing</span>
-    <span>SEO</span>
-    <span>Microsoft Office</span>
-    <span>Tableau</span>
-    <span>SPSS</span>
-    <span>MS Dynamics 365</span>
-    <span>Teamwork</span>
-    <span>Time Management</span>
-  </div>
-</section>
-
-<section class="fade-in">
-  <h2>Projects</h2>
-  <div class="card">
-    <strong>Personal Portfolio Website</strong>
-    <p>
-      Built a responsive portfolio website using HTML, CSS, and GitHub Pages
-      for free hosting and learning purposes.
-    </p>
-  </div>
-</section>
-
-<section class="fade-in buttons">
-  <a class="button" href="Abdul-Wahab-CV.pdf" download>Download CV</a>
-  <a class="button" href="https://www.linkedin.com/in/abdulwahab96/" target="_blank">LinkedIn</a>
-  <a class="button" href="mailto:abdulwahab_1096@yahoo.com">Email Me</a>
-</section>
-
-<footer>
-  © 2025 Abdul Wahab | Portfolio
-</footer>
-
-<script>
-/* ===== Scroll Animation Script ===== */
-const sections = document.querySelectorAll('.fade-in');
-
-const observer = new IntersectionObserver(entries => {
-  entries.forEach(entry => {
-    if (entry.isIntersecting) {
-      entry.target.classList.add('show');
-    }
-  });
-});
-
-sections.forEach(section => {
-  observer.observe(section);
-});
-</script>
-
+<body style="text-align:center;">
+  <h1 style="color:red;">GITHUB PAGES IS NOW WORKING</h1>
 </body>
 </html>
