--- a/index.html
+++ b/index.html
@@ -1,9 +1,211 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>TEST</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Abdul Wahab | Portfolio</title>
+
+<style>
+body {
+  margin: 0;
+  font-family: 'Segoe UI', Arial, sans-serif;
+  background: #f8fafc;
+  color: #1f2937;
+  line-height: 1.7;
+}
+
+header {
+  background: linear-gradient(135deg, #0f172a, #1e293b);
+  color: white;
+  padding: 90px 20px;
+  text-align: center;
+}
+
+header img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 4px solid white;
+  object-fit: cover;
+  margin-bottom: 20px;
+}
+
+header h1 {
+  font-size: 42px;
+  margin-bottom: 10px;
+}
+
+section {
+  max-width: 1100px;
+  margin: auto;
+  padding: 70px 20px;
+}
+
+h2 {
+  text-align: center;
+  font-size: 32px;
+  margin-bottom: 50px;
+}
+
+.card {
+  background: white;
+  border-radius: 14px;
+  padding: 30px;
+  margin-bottom: 30px;
+  box-shadow: 0 15px 30px rgba(0,0,0,0.08);
+  transition: transform 0.3s ease;
+}
+
+.card:hover {
+  transform: translateY(-8px);
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 30px;
+}
+
+.skills span {
+  display: inline-block;
+  background: #e5e7eb;
+  padding: 10px 18px;
+  margin: 6px;
+  border-radius: 999px;
+  font-size: 14px;
+}
+
+.project img {
+  width: 100%;
+  border-radius: 12px;
+  margin-bottom: 15px;
+}
+
+.buttons {
+  text-align: center;
+}
+
+.button {
+  display: inline-block;
+  background: #2563eb;
+  color: white;
+  padding: 14px 26px;
+  margin: 10px;
+  border-radius: 10px;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.button:hover {
+  background: #1d4ed8;
+}
+
+footer {
+  background: #0f172a;
+  color: #cbd5f5;
+  text-align: center;
+  padding: 30px;
+}
+
+.fade-in {
+  opacity: 0;
+  transform: translateY(40px);
+  transition: all 0.9s ease;
+}
+
+.fade-in.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+</style>
 </head>
-<body style="text-align:center;">
-  <h1 style="color:red;">GITHUB PAGES IS NOW WORKING</h1>
+
+<body>
+
+<header>
+  <img src="https://images.unsplash.com/photo-1527980965255-d3b416303d12" alt="Profile Photo">
+  <h1>Abdul Wahab</h1>
+  <p>MSc Digital Marketing & Analytics | Helsinki, Finland</p>
+</header>
+
+<section class="fade-in">
+  <h2>About Me</h2>
+  <p style="max-width:800px;margin:auto;text-align:center;">
+    I am a motivated and detail-oriented professional with experience in customer service,
+    operations, and digital marketing. I enjoy learning new technologies and building
+    practical, real-world projects.
+  </p>
+</section>
+
+<section class="fade-in">
+  <h2>Experience</h2>
+  <div class="grid">
+    <div class="card">
+      <h3>Restaurant Worker – Fafa’s</h3>
+      <p>Customer service, inventory handling, and fast-paced operations.</p>
+    </div>
+    <div class="card">
+      <h3>Cleaner – IHP</h3>
+      <p>Maintained hygiene and safety standards with strong attention to detail.</p>
+    </div>
+    <div class="card">
+      <h3>Assistant Group Shop Manager</h3>
+      <p>Managed inventory, audits, and daily business operations.</p>
+    </div>
+  </div>
+</section>
+
+<section class="fade-in">
+  <h2>Skills</h2>
+  <div class="skills" style="text-align:center;">
+    <span>Digital Marketing</span>
+    <span>SEO</span>
+    <span>Microsoft Office</span>
+    <span>Tableau</span>
+    <span>SPSS</span>
+    <span>MS Dynamics 365</span>
+    <span>Analytics</span>
+    <span>Teamwork</span>
+  </div>
+</section>
+
+<section class="fade-in">
+  <h2>Projects</h2>
+  <div class="grid">
+    <div class="card project">
+      <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085">
+      <h3>Personal Portfolio Website</h3>
+      <p>Built using HTML, CSS, and GitHub Pages for learning and practice.</p>
+    </div>
+    <div class="card project">
+      <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c">
+      <h3>Marketing Analytics Practice</h3>
+      <p>Hands-on analytics work using Tableau and SPSS.</p>
+    </div>
+  </div>
+</section>
+
+<section class="fade-in buttons">
+  <a class="button" href="Abdul-Wahab-CV.pdf" download>Download CV</a>
+  <a class="button" href="https://www.linkedin.com/in/abdulwahab96/" target="_blank">LinkedIn</a>
+  <a class="button" href="mailto:abdulwahab_1096@yahoo.com">Email Me</a>
+</section>
+
+<footer>
+  © 2025 Abdul Wahab | Portfolio
+</footer>
+
+<script>
+const items = document.querySelectorAll('.fade-in');
+const observer = new IntersectionObserver(entries => {
+  entries.forEach(entry => {
+    if (entry.isIntersecting) {
+      entry.target.classList.add('show');
+    }
+  });
+});
+items.forEach(item => observer.observe(item));
+</script>
+
 </body>
 </html>
